# dworshak-env

./: .env  .pytest.toml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml
assets/: dworshak-env_v0.1.8_tree_20260603_235643.json
docs/: CHANGELOG.md  DWORSHAK-ENV.md
src/dworshak_env/: __init__.py  __main__.py  _version.py  cli.py  cli_stdlib.py  core.py  dworshak_env.py  logging_setup.py
src/dworshak_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_cli_stdlib.py  test_core.py
